[package]
name = "meme_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
glam = "0.27"
rapier3d = { version = "0.18", features = ["simd-stable"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
winit = "0.29"

[dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
